CODEterpreter/CODEterpreter/obj/Debug/net7.0/CodeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\a\Desktop\Interpreter\CODEterpreter\CODEterpreter\InterpreterGrammar\Code.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace CODEterpreter.InterpreterGrammar {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class CodeParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, BEGIN=20, END=21, IF=22, ELSE=23, BEGINIF=24, ENDIF=25, 
		BEGINWHILE=26, ENDWHILE=27, DATATYPE=28, DOLLARSIGNCARRIAGE=29, ASSIGN=30, 
		COLON=31, BOOLEANLITERAL=32, INTEGERLITERAL=33, FLOATLITERAL=34, CHARLITERAL=35, 
		STRINGLITERAL=36, WS=37, NEWLINE=38, COLONFUNCTION=39, IDENTIFIER=40, 
		COMMENT=41;
	public const int
		RULE_program = 0, RULE_lines = 1, RULE_ifBlock = 2, RULE_elseIfBlock = 3, 
		RULE_blockLine = 4, RULE_block = 5, RULE_whileBlock = 6, RULE_inWhileBlock = 7, 
		RULE_declaration = 8, RULE_declarations = 9, RULE_terminalDeclaration = 10, 
		RULE_assignment = 11, RULE_assignments = 12, RULE_colonFunc = 13, RULE_constant = 14, 
		RULE_expression = 15, RULE_binaryOperation = 16, RULE_logicalOperation = 17, 
		RULE_booleanOperation = 18, RULE_concatenateOperation = 19;
	public static readonly string[] ruleNames = {
		"program", "lines", "ifBlock", "elseIfBlock", "blockLine", "block", "whileBlock", 
		"inWhileBlock", "declaration", "declarations", "terminalDeclaration", 
		"assignment", "assignments", "colonFunc", "constant", "expression", "binaryOperation", 
		"logicalOperation", "booleanOperation", "concatenateOperation"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'WHILE'", "','", "'+'", "'-'", "'NOT'", "'*'", "'/'", 
		"'%'", "'AND'", "'OR'", "'>'", "'<'", "'>='", "'<='", "'=='", "'<>'", 
		"'&'", "'BEGIN CODE'", "'END CODE'", "'IF'", "'ELSE'", "'BEGIN IF'", "'END IF'", 
		"'BEGIN WHILE'", "'END WHILE'", null, "'$'", "'='", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "BEGIN", "END", "IF", 
		"ELSE", "BEGINIF", "ENDIF", "BEGINWHILE", "ENDWHILE", "DATATYPE", "DOLLARSIGNCARRIAGE", 
		"ASSIGN", "COLON", "BOOLEANLITERAL", "INTEGERLITERAL", "FLOATLITERAL", 
		"CHARLITERAL", "STRINGLITERAL", "WS", "NEWLINE", "COLONFUNCTION", "IDENTIFIER", 
		"COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Code.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CodeParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode BEGIN() { return GetToken(CodeParser.BEGIN, 0); }
		public ITerminalNode[] NEWLINE() { return GetTokens(CodeParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(CodeParser.NEWLINE, i);
		}
		public ITerminalNode END() { return GetToken(CodeParser.END, 0); }
		public ITerminalNode Eof() { return GetToken(CodeParser.Eof, 0); }
		public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public LinesContext[] lines() {
			return GetRuleContexts<LinesContext>();
		}
		public LinesContext lines(int i) {
			return GetRuleContext<LinesContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; Match(BEGIN);
			State = 41; Match(NEWLINE);
			State = 47;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==DATATYPE) {
				{
				{
				State = 42; declaration();
				State = 43; Match(NEWLINE);
				}
				}
				State = 49;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 53;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << IF) | (1L << COLONFUNCTION) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				State = 50; lines();
				}
				}
				State = 55;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 56; Match(END);
			State = 60;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==NEWLINE) {
				{
				{
				State = 57; Match(NEWLINE);
				}
				}
				State = 62;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 63; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LinesContext : ParserRuleContext {
		public ITerminalNode[] NEWLINE() { return GetTokens(CodeParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(CodeParser.NEWLINE, i);
		}
		public AssignmentContext[] assignment() {
			return GetRuleContexts<AssignmentContext>();
		}
		public AssignmentContext assignment(int i) {
			return GetRuleContext<AssignmentContext>(i);
		}
		public ColonFuncContext[] colonFunc() {
			return GetRuleContexts<ColonFuncContext>();
		}
		public ColonFuncContext colonFunc(int i) {
			return GetRuleContext<ColonFuncContext>(i);
		}
		public IfBlockContext[] ifBlock() {
			return GetRuleContexts<IfBlockContext>();
		}
		public IfBlockContext ifBlock(int i) {
			return GetRuleContext<IfBlockContext>(i);
		}
		public WhileBlockContext[] whileBlock() {
			return GetRuleContexts<WhileBlockContext>();
		}
		public WhileBlockContext whileBlock(int i) {
			return GetRuleContext<WhileBlockContext>(i);
		}
		public LinesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lines; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterLines(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitLines(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLines(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LinesContext lines() {
		LinesContext _localctx = new LinesContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_lines);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 69;
					_errHandler.Sync(this);
					switch (_input.La(1)) {
					case IDENTIFIER:
						{
						State = 65; assignment();
						}
						break;
					case COLONFUNCTION:
						{
						State = 66; colonFunc();
						}
						break;
					case IF:
						{
						State = 67; ifBlock();
						}
						break;
					case T__2:
						{
						State = 68; whileBlock();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 71; Match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 75;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfBlockContext : ParserRuleContext {
		public ITerminalNode IF() { return GetToken(CodeParser.IF, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(CodeParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(CodeParser.NEWLINE, i);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode ELSE() { return GetToken(CodeParser.ELSE, 0); }
		public ElseIfBlockContext elseIfBlock() {
			return GetRuleContext<ElseIfBlockContext>(0);
		}
		public IfBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterIfBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitIfBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfBlockContext ifBlock() {
		IfBlockContext _localctx = new IfBlockContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_ifBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77; Match(IF);
			State = 78; Match(T__0);
			State = 79; expression(0);
			State = 80; Match(T__1);
			State = 81; Match(NEWLINE);
			State = 82; block();
			State = 86;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				State = 83; Match(NEWLINE);
				State = 84; Match(ELSE);
				State = 85; elseIfBlock();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseIfBlockContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(CodeParser.NEWLINE, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public IfBlockContext ifBlock() {
			return GetRuleContext<IfBlockContext>(0);
		}
		public ElseIfBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseIfBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterElseIfBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitElseIfBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseIfBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseIfBlockContext elseIfBlock() {
		ElseIfBlockContext _localctx = new ElseIfBlockContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_elseIfBlock);
		try {
			State = 91;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case NEWLINE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 88; Match(NEWLINE);
				State = 89; block();
				}
				break;
			case IF:
				EnterOuterAlt(_localctx, 2);
				{
				State = 90; ifBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockLineContext : ParserRuleContext {
		public LinesContext[] lines() {
			return GetRuleContexts<LinesContext>();
		}
		public LinesContext lines(int i) {
			return GetRuleContext<LinesContext>(i);
		}
		public BlockLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockLine; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterBlockLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitBlockLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockLineContext blockLine() {
		BlockLineContext _localctx = new BlockLineContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_blockLine);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << IF) | (1L << COLONFUNCTION) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				State = 93; lines();
				}
				}
				State = 98;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public ITerminalNode BEGINIF() { return GetToken(CodeParser.BEGINIF, 0); }
		public ITerminalNode NEWLINE() { return GetToken(CodeParser.NEWLINE, 0); }
		public BlockLineContext blockLine() {
			return GetRuleContext<BlockLineContext>(0);
		}
		public ITerminalNode ENDIF() { return GetToken(CodeParser.ENDIF, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(BEGINIF);
			State = 100; Match(NEWLINE);
			State = 101; blockLine();
			State = 102; Match(ENDIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileBlockContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(CodeParser.NEWLINE, 0); }
		public InWhileBlockContext inWhileBlock() {
			return GetRuleContext<InWhileBlockContext>(0);
		}
		public WhileBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterWhileBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitWhileBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileBlockContext whileBlock() {
		WhileBlockContext _localctx = new WhileBlockContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_whileBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104; Match(T__2);
			State = 105; Match(T__0);
			State = 106; expression(0);
			State = 107; Match(T__1);
			State = 108; Match(NEWLINE);
			State = 109; inWhileBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InWhileBlockContext : ParserRuleContext {
		public ITerminalNode BEGINWHILE() { return GetToken(CodeParser.BEGINWHILE, 0); }
		public ITerminalNode NEWLINE() { return GetToken(CodeParser.NEWLINE, 0); }
		public LinesContext lines() {
			return GetRuleContext<LinesContext>(0);
		}
		public ITerminalNode ENDWHILE() { return GetToken(CodeParser.ENDWHILE, 0); }
		public InWhileBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inWhileBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterInWhileBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitInWhileBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInWhileBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InWhileBlockContext inWhileBlock() {
		InWhileBlockContext _localctx = new InWhileBlockContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_inWhileBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(BEGINWHILE);
			State = 112; Match(NEWLINE);
			State = 113; lines();
			State = 114; Match(ENDWHILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public ITerminalNode DATATYPE() { return GetToken(CodeParser.DATATYPE, 0); }
		public DeclarationsContext declarations() {
			return GetRuleContext<DeclarationsContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; Match(DATATYPE);
			State = 117; declarations();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationsContext : ParserRuleContext {
		public TerminalDeclarationContext[] terminalDeclaration() {
			return GetRuleContexts<TerminalDeclarationContext>();
		}
		public TerminalDeclarationContext terminalDeclaration(int i) {
			return GetRuleContext<TerminalDeclarationContext>(i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declarations; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterDeclarations(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitDeclarations(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclarations(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationsContext declarations() {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_declarations);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; terminalDeclaration();
			State = 124;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__3) {
				{
				{
				State = 120; Match(T__3);
				State = 121; terminalDeclaration();
				}
				}
				State = 126;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TerminalDeclarationContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CodeParser.IDENTIFIER, 0); }
		public ITerminalNode ASSIGN() { return GetToken(CodeParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public TerminalDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_terminalDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterTerminalDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitTerminalDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerminalDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TerminalDeclarationContext terminalDeclaration() {
		TerminalDeclarationContext _localctx = new TerminalDeclarationContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_terminalDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				State = 127; Match(IDENTIFIER);
				}
				break;

			case 2:
				{
				State = 128; Match(IDENTIFIER);
				State = 129; Match(ASSIGN);
				State = 130; expression(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public AssignmentsContext assignments() {
			return GetRuleContext<AssignmentsContext>(0);
		}
		public ITerminalNode ASSIGN() { return GetToken(CodeParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICodeListener typedListener = listener as ICodeListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICodeVisitor<TResult> typedVisitor = visitor as ICodeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_assignment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133; assignments();
			State = 134; Match(ASSIGN);
			State = 136;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				State = 135;
				_la = _input.La(1);
				if ( !(_la==T__4 || _la==T__5) ) {
				_errHandler.RecoverInline(this);
				} else {
